# LearnNDK

./: README.md
app/: build.gradle
app/src/androidTest/java/me/sam/ndktest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Calculator.cpp  Calculator.h  TestCMake.txt  native-lib.cpp
app/src/main/cpp/book/: CMakeLists.txt  book_manager.cpp  book_manager.h  test.cpp  test.h
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/java/me/sam/ndktest/: MainActivity.java  NDKTest.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/me/sam/ndktest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
testlib/: build.gradle
testlib/src/androidTest/java/me/sam/testlib/: ExampleInstrumentedTest.java
testlib/src/main/: AndroidManifest.xml
testlib/src/main/cpp/: CMakeLists.txt  TestNative.cpp
testlib/src/main/java/me/sam/testlib/: TestNativeActivity.java
testlib/src/main/res/layout/: activity_test_native.xml
testlib/src/test/java/me/sam/testlib/: ExampleUnitTest.java
